[package]
name = "jrenamer"
version = "0.1.0"
authors = ["Joshua O'Connor <joshua@joshuao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = "2.33.3"
serde_json = "1.0"
serde = {version = "1.0.118", features = ["derive"]}
regex = "1"
lazy_static = "1.4.0"
text_io = "0.1.8"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
